<resources>

    <string name="app_name">RISE Weather</string>

    <string name="main_search_hint">Enter city to search for</string>
    <string name="main_short_search_help">Search in the box above for a city to receive its weather conditions.</string>
    <string name="main_toast_searching">Searching...</string>
    <string name="main_description">Description</string>
    <string name="main_temperature">Temperature</string>
    <string name="main_humidity">Humidity</string>
    <string name="main_wind_speed">Wind Speed</string>
    <string name="main_error">There was an error, please try again.</string>
    <string name="main_city_headline">Results for %1$s:</string>
    <string name="main_map_button">Show on map</string>
    <string name="title_activity_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="menu_main_about">About</string>
    <string name="about_text">Search for any city in the search box to receive the weather conditions. The application uses the API of Openweathermap and is just a demo application. The requests are restricted for all users to 200 request per day!\n\nThis application was created during a workshop about Mobile Technologies with focus on Android Development at the Sanskrithi School of Engineering in January 2017. Paul Spiesberger gave an introduction on how to start your own first Android Project.</string>

</resources>
