<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class=".MainActivityBinding">

        <variable
            name="clickListener"
            type="sse.in.weather.MainActivity" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="sse.in.weather.MainActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/main_search_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_toLeftOf="@+id/main_search_button"
                    android:hint="@string/main_search_hint"
                    android:inputType="textCapWords" />

                <ImageButton
                    android:id="@+id/main_search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@color/colorAccent"
                    android:onClick="@{clickListener::onSearchClicked}"
                    android:padding="8dp"
                    app:srcCompat="@drawable/ic_search" />

            </RelativeLayout>

            <TextView
                android:id="@+id/main_short_search_help_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/main_short_search_help"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/main_city_headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/main_layout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_toLeftOf="@+id/main_description_textview"
                    android:text="@string/main_description"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/main_description_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="TEST"
                    android:textColor="@color/black" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/main_layout_temerature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_toLeftOf="@+id/main_temperature_textview"
                    android:text="@string/main_temperature"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/main_temperature_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="TEST"
                    android:textColor="@color/black" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/main_layout_humidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_toLeftOf="@+id/main_humidity_textview"
                    android:text="@string/main_humidity"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/main_humidity_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="TEST"
                    android:textColor="@color/black" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/main_layout_wind_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_toLeftOf="@+id/main_wind_speed_textview"
                    android:text="@string/main_wind_speed"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/main_wind_speed_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="TEST"
                    android:textColor="@color/black" />

            </RelativeLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/main_map_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/main_map_button"
                android:visibility="gone" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/main_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent_light_grey"
            android:visibility="gone">

            <android.support.v4.widget.ContentLoadingProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </RelativeLayout>
</layout>